2010-07-14  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        WebKit needs a rebaselining tool (finally)
        https://bugs.webkit.org/show_bug.cgi?id=42339

        This is a very basic rebaselining tool.  It's not
        quite as fancy as chromium's as it will only handle
        updating failing results.  It cannot yet handle adding new
        results, or updating results where the results should not
        replace existing results.

        * Scripts/webkitpy/layout_tests/port/base.py:
        * Scripts/webkitpy/tool/commands/__init__.py:
        * Scripts/webkitpy/tool/commands/queries.py:
        * Scripts/webkitpy/tool/commands/rebaseline.py: Added.
        * Scripts/webkitpy/tool/commands/rebaseline_unittest.py: Added.

2010-07-14  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r63352.
        http://trac.webkit.org/changeset/63352
        https://bugs.webkit.org/show_bug.cgi?id=42341

        Broke plugin-initiate-popup-window.html and plugin-javascript-
        access.html on snow leopard (Requested by abarth on #webkit).

        * DumpRenderTree/TestNetscapePlugIn/PluginObject.cpp:
        (pluginAllocate):
        * DumpRenderTree/TestNetscapePlugIn/PluginObject.h:
        * DumpRenderTree/TestNetscapePlugIn/main.cpp:
        (NPP_New):
        (handleEventCarbon):
        (handleEventCocoa):

2010-07-14  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Mark Rowe.

        Lower WebKitTestRunner notifyDone timeout to 6.0 for now, to make it easier to grind through the failures.

        * WebKitTestRunner/InjectedBundle/LayoutTestController.cpp:

2010-07-14  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r63346.
        http://trac.webkit.org/changeset/63346
        https://bugs.webkit.org/show_bug.cgi?id=42295

        Broke lots of tests, some of which probably just need new
        results (Requested by aroben on #webkit).
