@@ -42,9 +42,9 @@ from webkitpy.tool.multicommandtool import AbstractDeclarativeCommand
 # For now it's here, until we have a second need for it.
 class BuilderToPort(object):
     _builder_name_to_port_name = {
-        r"SnowLeopard": "mac",
-        r"Leopard": "mac",
-        r"Tiger": "mac",
+        r"SnowLeopard": "mac-snowleopard",
+        r"Leopard": "mac-leopard",
+        r"Tiger": "mac-tiger",
         r"Windows": "win",
         r"GTK": "gtk",
         r"Qt": "qt",
